--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <title>First Project</title>
+    <link rel="stylesheet" href="styles.css"/>
+  </head>
+  <body>
+    <h1 id="title">First Form</h1>
+    <p id="description">This is a simple form built with html and css.</p>
+    <form id="survey-form" meathod="post" action="">
+      <fieldset>
+        <label for="name">Name <input id="name" type="text" name="name" required /></label>
+        <label for="email">email <input id="email" type="email" name="email" required /></label>
+      </fieldset>
+      <fieldset>
+      </fieldset>
+      <fieldset>
+      </fieldset>
+    </form>
+  </body>
+</html>
